# aurora-cycler-manager

./: .gitignore  .pre-commit-config.yaml  README.md  cucumber_analysis.py  cucumber_daemon.py  cucumber_dash.py  cucumber_eclab_harvester.py  cucumber_tools.py  cycler_servers.py  database_setup.py  eclab_harvester.py  pyproject.toml  requirements.txt  server_manager.py  version.py  visualiser.py  zensical.toml
.github/workflows/: CI.yml  docs.yml  test.yml
aurora_cycler_manager/: __init__.py  analysis.py  battinfo_utils.py  bdf_converter.py  config.py  cycler_servers.py  daemon.py  data_bundle.py  data_parse.py  database_engine.py  database_funcs.py  database_setup.py  dicts.py  eclab_harvester.py  neware_harvester.py  protocol.py  server_manager.py  setup_logging.py  ssh.py  stdlib_utils.py  tomato_converter.py  unicycler.py  utils.py  version.py  visualiser.py
aurora_cycler_manager/assets/: styles.css
aurora_cycler_manager/visualiser/: __init__.py  app.py  batches.py  db_batch_edit.py  db_info.py  db_protocol_edit.py  db_view.py  file_io.py  funcs.py  notifications.py  plotting.py  samples.py  startup.py
aurora_cycler_manager/visualiser/assets/: clientside.js  dashAgGridFunctions.js  styles.css
aurora_cycler_manager/visualiser/plots/: __init__.py  colors.py  cycles.py  defaults.py  eis.py  time_series.py
docs/: acknowledgements.md  index.md  installation.md  usage.md
docs/api/: data_parse.md  database_funcs.md  server_manager.md
tests/: conftest.py  mocks.py  test_analysis.py  test_battinfo_utils.py  test_config.py  test_database_funcs.py  test_database_setup.py  test_eclab_harvester.py  test_file_io.py  test_imports.py  test_integration.py  test_neware_harvester.py  test_server_manager.py  test_tomato_converter.py  test_unicycler.py  test_utils.py  test_version.py  test_visualiser.py  update_test_database.py
tests/test_data/: shared_config.json
tests/test_data/database/: test_database.bak  test_database.db
tests/test_data/eclab_harvester/: different_test.mpr  file_2025-10-17_162649-2.mpl  file_2025-10-17_162649-2.mpr  file_2025-10-17_163649.mpr  file_2025-10-17_164650.mpr  file_2025-10-17_165650.mpr  test_C01.mpr
tests/test_data/local_snapshots/eclab_snapshots/250116_kigr_gen6/1/: 250116_kigr_gen6_01_01_GCPL_CD8.mpl  250116_kigr_gen6_01_01_GCPL_CD8.mpr  250116_kigr_gen6_01_02_GCPL_CD8.mpl  250116_kigr_gen6_01_02_GCPL_CD8.mpr
tests/test_data/local_snapshots/eclab_snapshots/commercial_cell/commercial_cell_009/tt2b-commercial_cell_009__1753280829/: commercial_cell_001__1753280829_C01.mpr
tests/test_data/local_snapshots/eclab_snapshots/commercial_cell/commercial_cell_009/tt2b-commercial_cell_009__1753283786/: commercial_cell_001__1753283786_C01.mpr
tests/test_data/local_snapshots/eclab_snapshots/commercial_cell/commercial_cell_009/tt2b-commercial_cell_009__1753343328/: commercial_cell_001__1753343328_C01.mpr
tests/test_data/local_snapshots/eclab_snapshots/commercial_cell/commercial_cell_009/tt4b-commercial_cell_009__1761925606/: commercial_cell_009__1761925606_C13.mpl  commercial_cell_009__1761925606_C13.mpr
tests/test_data/local_snapshots/neware_snapshots/: nw4-120-6-1-36.ndax
tests/test_data/local_snapshots/tomato_snapshots/240606_svfe_gen1/240606_svfe_gen1_15/: snapshot.tt1-100.json
tests/test_data/misc/: BattINFO_example.xlsx  PEIS.mpl  PEIS.mpr  aurora_zenodo_info.xlsx
tests/test_data/protocols/: unicycler.json
tests/test_data/samples/: test_battinfo.jsonld
tests/test_data/ssh/bts_folder/NdcFile/20250128/: 20250128_161756_270120_0_69_33.ndc  20250128_161756_270120_0_69_33_es.ndc  20250128_161756_270120_0_69_33_log.ndc  20250128_161756_270120_0_69_33_runInfo.ndc  20250128_161756_270120_0_69_33_step.ndc
