[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-cycler-manager"
requires-python = ">=3.9"
version = "0.5.1"
dependencies = [
    "yadg",
    "pytz",
    "paramiko",
    "pandas",
    "numpy",
    "h5py",
    "xmltodict",
    "NewareNDA",
    "scp",
    "dash",
    "scipy",
    "dash_bootstrap_components",
    "dash_mantine_components",
    "dash_resizable_panels",
    "dash_ag_grid",
    "python-calamine",
    "tables",
    "toml",
    "waitress",
    "obvibe @ git+https://github.com/EmpaEconversion/obvibe.git@0.1.2"
]

[project.scripts]
aurora-setup = "aurora_cycler_manager.database_setup:main"
aurora-app = "aurora_cycler_manager.visualiser.app:main"
aurora-daemon = "aurora_cycler_manager.daemon:main"

[tool.setuptools.package-data]
"aurora_cycler_manager.visualiser" = ["assets/*"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "N806",
    "T201",
    "FA102",
    "PD901",
    "FBT001",
    "FBT002",
    "PLR2004",
    "TD002",
    "TD003",
    "D203",
    "D213",
    "COM812",
]
fix = true

[tool.mypy]
disable_error_code = ["import-untyped"]
