[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-cycler-manager"
requires-python = ">=3.9"
version = "0.6.4"
dependencies = [
    "dash >=3.1.0",
    "dash_ag_grid",
    "dash_bootstrap_components",
    "dash_mantine_components",
    "dash_resizable_panels",
    "defusedxml",
    "h5py",
    "NewareNDA",
    "numpy",
    "orjson",
    "pandas",
    "paramiko",
    "python-calamine",
    "pytz",
    "scp",
    "scipy",
    "tables",
    "tsdownsample",
    "waitress",
    "xmltodict",
    "yadg",
]

[project.scripts]
aurora-setup = "aurora_cycler_manager.database_setup:main"
aurora-app = "aurora_cycler_manager.visualiser.app:main"
aurora-daemon = "aurora_cycler_manager.daemon:main"

[tool.setuptools.package-data]
"aurora_cycler_manager.visualiser" = ["assets/*"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "N806",
    "N803",
    "N815",
    "T201",
    "FA102",
    "PD901",
    "FBT001",
    "FBT002",
    "PLR2004",
    "TD002",
    "TD003",
    "D203",
    "D213",
    "COM812",
]
fix = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "S101", # asserts allowed in tests
    "PT011", # allow just checking for ValueError without match
]

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = [
    "test\\.py$", # files end with test.py
    "^test", # files that start with test
]
plugins = ["pydantic.mypy"]
