[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aurora-cycler-manager"
description = "Battery cycler management, data analysis and visualisation."
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "aurora-unicycler>=0.4.0",
    "battinfoconverter-backend>=2.2.5",
    "dash[diskcache]>=3.2.0",
    "dash_ag_grid>=32.3.0",
    "dash_bootstrap_components>=2.0.3",
    "dash_mantine_components>=2.1.0",
    "dash_resizable_panels>=0.1.0",
    "defusedxml>=0.7.1",
    "fastnda>=0.3.0",
    "h5py>=3.14.0",
    "numpy>=2.2.6",
    "orjson>=3.11.0",
    "pandas>=2.3.1",
    "paramiko>=3.5.1",
    "platformdirs>=4.3.8",
    "polars>=1.36.1",
    "pyarrow>=21.0.0",
    "python-calamine>=0.4.0",
    "scp>=0.15.0",
    "tables>=3.10.1",
    "tsdownsample>=0.1.4.1",
    "typing-extensions>=4.15.0",
    "tzlocal>=5.3.1",
    "waitress>=3.0.2",
    "xmltodict>=0.14.2",
    "yadg>=6.2.2",
]

[project.optional-dependencies]
dev = [
    "bumpver>=2025.1131",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.14.11",
]

[project.scripts]
aurora-setup = "aurora_cycler_manager.database_setup:main"
aurora-app = "aurora_cycler_manager.visualiser.startup:main"
aurora-daemon = "aurora_cycler_manager.daemon:main"

[tool.setuptools.package-data]
"aurora_cycler_manager.visualiser" = ["assets/*"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "N803",
    "N806",
    "N815",
    "PLR2004",
    "TD002",
    "TD003",
    "D203",
    "D213",
    "COM812",
]
fix = true

[tool.ruff.extend-per-file-ignores]
"tests/*.py" = [
    "ANN001",  # Fixture params
    "ARG001",  # Unused arg in func
    "ARG002",  # Unused arg in method
    "S101",    # Asserts allowed in tests
    "PT011",   # Allow just checking for ValueError without match
]

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = [
    "test\\.py$", # files end with test.py
    "^test", # files that start with test
]
plugins = ["pydantic.mypy"]

[tool.bumpver]
current_version = "v0.9.1"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
tag_message = "Release {new_version}."
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"aurora_cycler_manager/version.py" = [
    '__version__ = "{pep440_version}"',
]
